# iMD

./: .gitignore  AGENTS.md  Makefile  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/src/app/: main.py
backend/src/app/agents/: __init__.py  config.py  exceptions.py  google_adk_agent.py  interface.py  openai_agent.py  router.py
backend/src/app/api/: ai.py  files.py
backend/src/app/services/: ai_service.py  file_service.py
docs/: ai-agent-refactor.md  ai-chat-logging.md  ai-notes-sidebar-merge-spec.md  ai-service-agent-sdk-spec.md  ask-ai-composer-trim-spec.md  ask-ai-ui-update-spec.md  async-ai-streaming-spec.md  backend-agent-router-spec.md  chat-bubble-style-spec.md  chat-conversation-style-spec.md  chat-response-placeholder-bug.md  edit-mode-scroll-fix.md  editor-split-resize-spec.md  editor-toolbar-icon-buttons-spec.md  full-markdown-support-spec.md  icon-button-tooltips.md  instant-tooltip-enhancement.md  main-page-ai-notes-style-refine-spec.md  main-page-spec.md  markdown-editor-enhancements.md  math-rendering-fix-spec.md  openai-agent-config-fix-spec.md  panel-collapse-toggle-spec.md  preview-mode-options-spec.md  save-endpoints-spec.md  sidebar-collapse-resize-spec.md  sidebar-collapsed-behavior-fix.md  sidebar-layout-polish-spec.md  spec-default-markdown-selection.md  spec.md  split-edit-preview-spec.md
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: App.tsx  index.css
ui/src/components/: Chat.tsx  Editor.tsx  LandingPage.tsx  Sidebar.tsx  Tooltip.tsx  WorkspaceView.tsx
workspace/: notes.md
(+2 files in other folders)
